Fix temporally the app's overflow problem with a hidden overflow css setting

--- a/react-front-end/src/components/Map/Map.css
+++ b/react-front-end/src/components/Map/Map.css
@@ -1,4 +1,5 @@
 html, body, #root, .App {
+  overflow: hidden;
   height: 100vh;
 }
 
@@ -23,7 +24,7 @@ html, body, #root, .App {
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  width: fit-content;
+  width: fit-content
   /* right: 33%; */
   /* margin: 12px; */
   /* border-radius: 4px; */
